--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.thymeleaf.cache=false
 
-upload.path=src/main/resources/static/uploads
+upload.path=uploads
+upload.url=/uploads/**
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
